fixing overflow

--- a/.docker-config/node/src/styles/components/tutorialComponents/section.scss
+++ b/.docker-config/node/src/styles/components/tutorialComponents/section.scss
@@ -5,7 +5,7 @@
   color: #272727;
 
   &__text {
-    overflow-x: auto;
+    overflow-x: scroll;
 
     & > p > a {
       color: #23daca;
